# mini-browser

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: claude-code.json  opencode.json  tools-openai.json
examples/: agent_example.py  basic_search.py
mini_browser/: __init__.py  api.py  cache.py  cli.py  compress.py  config.py  fetch.py  mcp_server.py  pdf.py  search.py  token_counter.py  tools.py
scripts/: setup_agents.py
