[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-browser"
version = "0.5.0"
description = "Token-efficient web search and browsing for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agent", "web", "search", "llm", "token-efficient", "mcp", "browsing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "ddgs>=0.1.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "lxml_html_clean>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
playwright = ["playwright>=1.40.0"]
pdf = ["pdfplumber>=0.10.0", "pypdf>=4.0.0"]
full = ["mcp>=1.0.0", "playwright>=1.40.0", "pdfplumber>=0.10.0", "pypdf>=4.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
mini-browser = "mini_browser.cli:main"
mini-browser-setup = "scripts.setup_agents:main"

[project.urls]
Homepage = "https://github.com/ghanibot/mini-browser"
Repository = "https://github.com/ghanibot/mini-browser"
Issues = "https://github.com/ghanibot/mini-browser/issues"

[tool.hatch.build.targets.wheel]
packages = ["mini_browser"]

[tool.ruff]
line-length = 100
target-version = "py310"
